Fixed findbug issues in BGP.
Change-Id: I3c2fb7433682d1ef3cafb77273849a3f397fb26a
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>